Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124253

Direct3D debug layer reports error when playing videos of same size and pixel format

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • 6.5.6, 6.7.1, 6.8.0 FF
    • 6.5, 6.6, 6.7, 6.8
    • Multimedia
    • None
    • Windows
    • 7f8463398 (dev), f995a3674 (6.7), 443404b01 (tqtc/lts-6.5)
    • Multimedia wk 15-16

      To reproduce:

      1. Enable Direct3D debug layer in DirectX control panel
      2. Prepare two videos of same size and format (duplicate the video file)
      3. Start media player and open the videos sequentially

       

      Observed result:

      • Validation errors in devenv output window (and crash if this is configured in DirectX control panel)

      Expected result:

      • No validation errors

       

      Root cause: Failure to recreate all Direct3D resources when FFmpeg Direct3D device changed. This happened because the check only took into account texture size and format, not the device used to create temporary resources in QFFmpeg::TextureBridge

        For Gerrit Dashboard: QTBUG-124253
        # Subject Branch Project Status CR V

            johanseg Jøger Hansegård
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes